# apple_music_lyrics

./: .gitignore  Cargo.toml  README.md
src/: lyric_json.rs  main.rs  models.rs  services.rs
src/models/: apple_music.rs  lyric_json.rs  synced_lyric_xml.rs
src/services/: apple_music_url.rs  response_handler.rs  token_handler.rs
